Fix panel image alignment

--- a/source/assets/css/components/image.scss
+++ b/source/assets/css/components/image.scss
@@ -65,14 +65,11 @@
 }
 
 .image__img {
-  // left: 50%;
-
   max-width: 100%;
   max-height: inherit;
 
-  // transform: translateX(-50%);
-
   @extend %e-display-block;
+  @extend %e-mgn-auto-x;
   @extend %e-position-relative;
 }
 
